<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="100dp"
    android:orientation="vertical"
    tools:context="com.zjh.mail.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="@dimen/textsize"/>
        <EditText
            android:id="@+id/et_username"

            android:layout_width="0dp"
            android:layout_weight="1.6"
            android:layout_height="wrap_content"
            android:textSize="@dimen/hintsize"
            android:maxLines="1"
            android:hint="@string/hint_username"
            android:layout_gravity="left"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.4"
            android:layout_height="wrap_content"
            android:text="\@163.com"
            android:textSize="@dimen/textsize"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize"
            android:text="@string/pwd"/>
        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="@dimen/hintsize"
            android:maxLines="1"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:gravity="left"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TIPS:请使用授权码作密码登陆"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:paddingTop="20dp">

        <CheckBox
            android:id="@+id/cb_save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="记住密码"
            android:checked="true"
            android:layout_gravity="center"
            android:textSize="@dimen/textsize"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_click"
        android:paddingTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/textsize"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="btn_login_clicked"/>

</LinearLayout>
